# server/controllers/skillController.js
@@ -15,36 +15,22 @@ exports.getAllSkills = async (req, res) => {
 
 exports.createSkill = async (req, res) => {
   try {
-    if (req.body._id) {
-      delete req.body._id;
+    if (req.body._id) delete req.body._id;
+
+    if (!req.file) {
+      return res.status(400).json({ error: "Fichier SVG requis" });
     }
 
-    let logoUrl = null;
-    let svgContent = null;
-
-    //Permet de gérer une image ou un SVG
-    if (req.file) {
-      logoUrl = `${req.protocol}://${req.get("host")}/images/${
-        req.file.filename
-      }`;
-    }
-
-    if (req.body.svgContent) {
-      svgContent = req.body.svgContent;
-    }
-
-    if (!logoUrl && !svgContent) {
-      return res
-        .status(400)
-        .json({ error: "Logo image or SVG content is required" });
-    }
+    const logoUrl = `${req.protocol}://${req.get("host")}/images/${
+      req.file.filename
+    }`;
 
     const skill = new Skill({
       ...req.body,
       logoUrl,
-      svgContent,
       owner: req.user.id,
     });
+
     await skill.save();
     return res.status(201).json({ message: "Skill created", skill });
   } catch (error) {
@@ -71,20 +57,6 @@ exports.updateSkill = async (req, res) => {
       skill.logoUrl = `${req.protocol}://${req.get("host")}/images/${
         req.file.filename
       }`;
-      skill.svgContent = null; // on remplace le SVG si on upload une image
-    }
-
-    if (req.body.svgContent) {
-      // Si on envoie un nouveau SVG, on supprime le logo
-      if (skill.logoUrl) {
-        const oldFilename = skill.logoUrl.split("/images/")[1];
-        const oldPath = path.join(__dirname, "..", "images", oldFilename);
-        try {
-          await fs.promises.unlink(oldPath);
-        } catch (_) {}
-      }
-      skill.logoUrl = null;
-      skill.svgContent = req.body.svgContent;
     }
 
     Object.assign(skill, req.body);
